--- a/package.json
+++ b/package.json
@@ -1,99 +1,25 @@
 {
   "name": "react-material-admin-template",
-  "version": "0.0.1",
-  "description": "Admin template using React and Material-UI",
-  "engines": {
-    "npm": ">=3"
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "axios": "^0.16.2",
+    "flexboxgrid": "^6.3.1",
+    "font-awesome": "^4.7.0",
+    "history": "^4.7.2",
+    "material-ui": "^0.19.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-prop-types": "^0.4.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.11",
+    "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^1.0.0-alpha.4"
   },
   "scripts": {
-    "start": "npm-run-all --parallel test:watch open:src lint:watch",
-    "open:src": "babel-node tools/srcServer.js",
-    "open:dist": "babel-node tools/distServer.js",
-    "lint": "esw webpack.config.* src tools --color",
-    "lint:watch": "npm run lint -- --watch",
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "rimraf ./dist",
-    "prebuild": "npm run clean-dist && npm run lint && npm run test",
-    "build": "babel-node tools/build.js && npm run open:dist",
-    "test": "mocha tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
-    "test:cover": "babel-node node_modules/isparta/bin/isparta cover --root src --report html node_modules/mocha/bin/_mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
-    "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "test:watch": "npm run test -- --watch",
-    "open:cover": "npm run test:cover && open coverage/index.html"
-  },
-  "author": "Rafael Zeffa",
-  "license": "MIT",
-  "dependencies": {
-    "flexboxgrid": "6.3.1",
-    "font-awesome": "4.7.0",
-    "history": "4.5.1",
-    "material-ui": "0.17.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-router": "3.0.2",
-    "react-tap-event-plugin": "2.0.1",
-    "recharts": "0.20.8"
-  },
-  "devDependencies": {
-    "autoprefixer": "6.7.3",
-    "babel-cli": "6.23.0",
-    "babel-core": "6.23.1",
-    "babel-loader": "6.3.2",
-    "babel-plugin-react-display-name": "2.0.0",
-    "babel-plugin-transform-react-constant-elements": "6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.3.2",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.23.0",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-1": "6.22.0",
-    "babel-register": "6.23.0",
-    "browser-sync": "2.18.8",
-    "chai": "3.5.0",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "coveralls": "2.11.16",
-    "cross-env": "3.1.4",
-    "css-loader": "0.26.1",
-    "enzyme": "2.7.1",
-    "eslint": "3.15.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.10.0",
-    "eslint-watch": "3.0.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.10.0",
-    "html-webpack-plugin": "2.22.0",
-    "isparta": "4.0.0",
-    "mocha": "3.2.0",
-    "node-sass": "4.5.0",
-    "npm-run-all": "4.0.1",
-    "open": "0.0.5",
-    "postcss-loader": "1.3.1",
-    "prompt": "1.0.0",
-    "react-addons-test-utils": "15.4.2",
-    "redux-immutable-state-invariant": "1.2.4",
-    "replace": "0.3.0",
-    "rimraf": "2.5.4",
-    "sass-loader": "6.0.1",
-    "sinon": "1.17.7",
-    "sinon-chai": "2.8.0",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.1",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.12.2",
-    "webpack-md5-hash": "0.0.5"
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "material",
-    "material-ui",
-    "template",
-    "admin"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rafaelhz/react-material-admin-template"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
