--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "material-ui": "0.17.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
+    "react-redux": "5.0.6",
     "react-router": "3.0.2",
     "react-tap-event-plugin": "2.0.1",
-    "recharts": "0.20.8"
+    "recharts": "0.20.8",
+    "redux": "3.7.2"
   },
   "devDependencies": {
     "autoprefixer": "6.7.3",
